# Slicer

./: .clang-format  .codespellignore  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  CTestConfig.cmake  CTestCustom.cmake.in  DartConfig.cmake  GIT_MIGRATION_DATA_REMOVED.txt  GOVERNANCE.md  GenerateSlicer3Config.cmake  GenerateSlicerConfig.cmake  License.txt  README.md  README.txt  SECURITY.md  Slicer3Config.cmake.in  Slicer3InstallConfig.cmake.in  Slicer3Version.txt.in  SlicerCPack.cmake  SlicerConfig.cmake.in  SlicerExtensionCPack.cmake  SlicerGenerateSlicerConfig.cmake  SlicerInstallConfig.cmake.in  SlicerVersion.txt.in  SuperBuild.cmake  TestingMacros.h  UseSlicer.cmake.in  UseSlicer3.cmake.in  (+17 more)
Applications/: CMakeLists.txt
Applications/CLI/: Add.cxx  Add.xml  AffineRegistration.cxx  AffineRegistration.xml  BSplineDeformableRegistration.cxx  BSplineDeformableRegistration.xml  CMakeLists.txt  Cast.cxx  Cast.xml  CheckerBoard.cxx  CheckerBoard.xml  ComputeSUVBodyWeight.cxx  ConfidenceConnected.cxx  ConfidenceConnected.xml  CurvatureAnisotropicDiffusion.cxx  CurvatureAnisotropicDiffusion.xml  DWIDicomLoad.cxx  DWIDicomLoad.xml  DicomToNrrdConverter.cxx  DicomToNrrdConverter.xml  DiffusionTensorEstimation.cxx  DiffusionTensorEstimation.xml  DiffusionTensorMathematics.cxx  DiffusionTensorMathematics.xml  DiffusionTensorTest.cxx  DiffusionTensorTest.xml  DiffusionWeightedMasking.cxx  DiffusionWeightedMasking.xml  DiffusionWeightedTest.cxx  DiffusionWeightedTest.xml  ExecutionModelTour.cxx  ExecutionModelTour.xml  FreesurferSurfaceSectionExtraction.xml  GEDicom2NRRD.cxx  GEDicom2NRRD.xml  GEDicomDictionary.dic  GaussianBlurImageFilter.cxx  GaussianBlurImageFilter.xml  GradientAnisotropicDiffusion.cxx  GradientAnisotropicDiffusion.xml  (+63 more)
Applications/GUI/: CMakeLists.txt  Slicer3-forward.c.in  Slicer3.cxx  Slicer3.xml  Slicer3Bare.cxx
Applications/SlicerApp/: CMakeLists.txt  Main.cxx  qSlicerAppAboutDialog.cxx  qSlicerAppAboutDialog.h  qSlicerAppErrorReportDialog.cxx  qSlicerAppErrorReportDialog.h  qSlicerAppMainWindow.cxx  qSlicerAppMainWindow.h  qSlicerAppMainWindowCore.cxx  qSlicerAppMainWindowCore.h  qSlicerAppMainWindowCore_p.h  qSlicerAppMainWindow_p.h  slicer-application-properties.cmake
Applications/SlicerQT/: CMakeLists.txt  Main.cxx  SlicerQT-forward.c.in  qSlicerAboutDialog.cxx  qSlicerAboutDialog.h  qSlicerMainWindow.cxx  qSlicerMainWindow.h  qSlicerMainWindowCore.cxx  qSlicerMainWindowCore.h  qSlicerMainWindowCore_p.h  qSlicerQTWin32Header.h
Attic/Qt/: CMakeLists.txt  QtApp.cxx  QtSlicerNodeSelectorWidget.cxx  QtSlider.h  qslicerfactory.h  qvtkfactory.cxx  slicerview.cxx  vtkSlicerBaseGUIQtWin32Header.h
Attic/ScriptedModule/: CMakeLists.txt  vtkOpenGLScriptedActor.h  vtkScriptedModule.h  vtkScriptedModuleGUI.h
Base/: CMakeLists.txt  TestingMacros.h  qSlicerBaseConfigure.h.in  qSlicerBaseWin32Header.h.in  vtkSlicerBase.h  vtkSlicerBaseWin32Header.h  vtkSlicerConfigure.h.in
Base/CLI/: CMakeLists.txt  SEMCommandLineLibraryWrapper.cxx.in  itkPluginFilterWatcher.h  itkPluginUtilities.h  vtkPluginFilterWatcher.cxx  vtkPluginFilterWatcher.h  vtkSlicerBaseCLIConfigure.h.in  (+2 more)
Libs/: CMakeLists.txt
MRMLDM/: CMakeLists.txt  extension.cmake  vtkMRMLLayerDMCameraSynchronizer.cxx  vtkMRMLLayerDMCameraSynchronizer.h  vtkMRMLLayerDMInteractionLogic.cxx  vtkMRMLLayerDMLayerManager.cxx  vtkMRMLLayerDMLayerManager.h  vtkMRMLLayerDMObjectEventObserver.cxx  vtkMRMLLayerDMObjectEventObserver.h  vtkMRMLLayerDMObjectEventObserverScripted.cxx  vtkMRMLLayerDMObjectEventObserverScripted.h  vtkMRMLLayerDMPipelineCallbackCreator.h  vtkMRMLLayerDMPipelineCreateHelper.h  vtkMRMLLayerDMPipelineCreatorI.cxx  vtkMRMLLayerDMPipelineCreatorI.h  vtkMRMLLayerDMPipelineFactory.cxx  vtkMRMLLayerDMPipelineFactory.h  vtkMRMLLayerDMPipelineI.cxx  vtkMRMLLayerDMPipelineI.h  vtkMRMLLayerDMPipelineManager.cxx  vtkMRMLLayerDMPipelineManager.h  vtkMRMLLayerDMPipelineScriptedCreator.cxx  vtkMRMLLayerDMPipelineScriptedCreator.h  vtkMRMLLayerDMPythonUtil.cxx  vtkMRMLLayerDMPythonUtil.h  vtkMRMLLayerDMScriptedPipelineBridge.cxx  vtkMRMLLayerDMScriptedPipelineBridge.h  vtkMRMLLayerDisplayableManager.cxx  vtkMRMLLayerDisplayableManager.h  vtkObjectEventObserver.cxx  vtkObjectEventObserver.h  vtkSlicerLayerDMModuleMRMLDisplayableManagerExport.h  wheel.cmake
Modules/: CMakeLists.txt  loadablemodules.cmake  manifest.txt  namicsandbox-manifest.source.txt  nitrc-manifest.darwin.txt  nitrc-manifest.linux.txt  nitrc-manifest.source.txt  nitrc-manifest.win32.txt  slicer.org-manifest.source.txt
QTModules/: CMakeLists.txt  qSlicerQTModulesConfigure.h.in  qSlicerQTModulesExport.h.in  qSlicerQTModulesWin32Header.h.in
QTScriptedModules/: CMakeLists.txt
Resources/: BillsLogo.h  CMakeLists.txt  ITKLogo.h  MITLogo.h  MIT_NAMIC_Logo.h  MIT_NAMIC_PNL_Logo.h  NAMICLogo.h  qSlicer.qrc  qSlicerLogos.qrc  vtkSlicerSplashScreen_ImageData.h
SuperBuild/: CMakeLists.txt  CTestCustom.cmake.in  DWIConvert.CMakeLists.txt  External_BLAS.cmake  External_BRAINSTools.cmake  External_BatchMake.cmake  External_CLAPACK.cmake  External_CTK.cmake  External_CTKAPPLAUNCHER.cmake  External_CTKAppLauncherLib.cmake  External_CTKResEdit.cmake  External_ChangeTrackerPy.cmake  External_DCMTK.cmake  External_DCMTKcs.cmake  External_DWIConvert.cmake  External_DoubleConvert.cmake  External_EMSegment.cmake  External_GitPython.cmake  External_HDF5.cmake  External_ITK.cmake  External_ITKv3.cmake  External_ITKv4.cmake  External_Insight.cmake  External_JsonCpp.cmake  External_KWWidgets.cmake  External_LAPACK.cmake  External_LZMA.cmake  External_LibArchive.cmake  External_LibFFI.cmake  External_MultiVolumeExplorer.cmake  External_MultiVolumeImporter.cmake  External_NUMPY.cmake  External_NumPy.cmake  External_NumPy.old.cmake  External_OpenIGTLink.cmake  External_OpenIGTLinkIF.cmake  External_OpenJPEG.cmake  External_OpenSSL.cmake  External_PCRE.cmake  External_PCRE2.cmake  (+131 more)
(+14106 files in other folders)
